更新项目结构文档

--- a/doc/项目结构.md
+++ b/doc/项目结构.md
@@ -14,7 +14,134 @@
 
 
 
-#### 框架整体目录结构及用途
+[TOC]
+
+
+
+### 最常用功能及所在目录介绍
+
+#### 控制器
+
+控制器所在目录为 `app/Http/Controllers` , 根据子目录区分不同端的控制器, 控制器继承App/Http/Controllers/Controller` 类, 方便直接调用框架的一些相关功能
+
+控制器用于处理请求相关的操作, 如参数验证, 从请求中提取参数等, **控制器不参与业务逻辑处理**
+
+> 注: 控制器中不能直接调用Model类, 需要通过Service服务调用 (之前旧代码中的调用需要逐渐完善至Service中)
+
+#### Service
+
+Service为控制器提供服务, 所有的业务逻辑都需要Servcie提供, 且提供的服务需要与请求无关, 即所有的Service方法中**不能调用request相关操作**, 所有request相关操作需要在控制器中完成.
+
+同时, Service方法封装时, 需要考虑全局性, 即在Service中的方法在任何端的控制器都可以调用
+
+Service中的方法需要全部是静态方法
+
+> 注: 
+>
+> 1. 若遇到一些比较大量的表单提交操作, 为了不那么繁琐, 表单提交的数据可以在Service方法中通过request()方法获取, 但此时方法名必须显式添加后缀 FromRequest, 如 MerchantService::addFromRequest() 方法
+> 2. 有些操作可能只能针对某个端, 或只能某个角色才能调用, 此时需要在方法名中接入 ForXxx 后缀, 如: getMerchantsForAdmin
+
+#### 模型
+
+模型是对应于数据库表存在的对象, 并用于与数据库的增删改查操作
+
+所有的模型都需要继承`App\BaseModel`, 并在模型类注释中加入表字段注解, 方便调用时编辑器的提示及错误调用时的警告
+
+模型放在`app\Modules\模块目录`下, 一个模块中至少需要包含一个Service与若干个模型
+
+模型创建直接使用 `php artisan make:model -m`命令, 在创建模型的时候同时创建对应的`migration`,以方便维护数据结构
+
+
+
+### 常用目录介绍
+
+#### `app`
+
+几乎所有的业务逻辑代码都在此目录下, 包含了控制器, 模型, Service, 任务,  中间件, 异常处理, 以及其他相关代码
+
+##### `app/Http/Controllers`
+
+控制器所在目录, 根据子目录区分各个端控制器, 通用的控制器以及控制器基类直接放在此目录下
+
+##### `app/Http/Controllers/Admin`
+
+Admin端控制器所在目录
+
+##### `app/Http/Controllers/Oper`
+
+运营中心端控制器目录
+
+##### `app/Http/Controllers/Bizer`
+
+业务员端控制器目录
+
+##### `app/Http/Controllers/Merchant`
+
+商户端控制器目录
+
+##### `app/Http/Controllers/User`
+
+用户端小程序控制器目录
+
+##### `app/Http/Controllers/UserApp`
+
+用户端APP控制器目录
+
+##### `app/Modules/XXX` 
+
+模块目录, 包含一个模块的模型与service, 如 `app/Modules/Demo`模块下, 一般会包含`Demo.php`与`DemoService.php`, 其中`Demo.php`为模型类, 继承`App\BaseModel`, `DemoService.php`为Demo模块的业务逻辑
+
+#### `config`
+
+配置文件目录, 所有的配置文件都要放在此目录下, 在程序中通过`config('键名.二级键名')`获取配置信息,  除 `app.php`中的配置, 其他配置文件均已文件名作为一级配置名
+
+
+
+#### `routes`
+
+路由文件目录, 系统所有可访问的路由都在此目录下配置, 其中:
+
+ `routes/api.php`是接口的路由文件, 用于加载各个模块的接口路由, 以及定义通用的访问路由
+
+ `routes/web.php`是页面的路由文件, 用于加载各个端的入口页面, 以及其他零散的页面
+
+> 注: 系统使用前后端分离的单页面架构, 所有的后端数据请求均以接口的形式提供数据, 所以除非必要, 一般情况下路由都是接口路由
+
+#### `routes/api.php` 
+
+接口路由文件, 用于加载各个模块的接口路由, 以及定义通用的访问路由
+
+#### `routes/api 目录`
+
+用于存放各个端的路由
+
+其中 `routes/api/admin.php`中存放admin端路由
+
+`routes/api/oper.php`中存放运营中心端路由
+
+`routes/api/bizer.php`中存放业务员端路由
+
+`routes/api/merchant.php`中存放商户端路由
+
+`routes/api/user.php`中存放用户端小程序路由
+
+`routes/api/user_app.php`中存放用户端APP接口路由
+
+#### `resources`
+
+静态资源目录, 其中:
+
+`assets` 为前端通用静态资源目录
+
+`fonts` 为后端使用的字体文件目录
+
+`lang` 为语言包目录
+
+其他为各个端的vue文件目录
+
+
+
+### 框架整体目录结构及用途
 
 ```
 project  -- 项目根目录
@@ -119,11 +246,12 @@ project  -- 项目根目录
 │  │  ├─admin  -- admin端路由目录
 │  │  ├─merchant  -- 商户端路由目录
 │  │  ├─oper  -- 运营中心端路由目录
-│  │  ├─admin.php  -- admin端路由目录
-│  │  ├─merchant.php  -- 商户端路由目录
-│  │  ├─oper.php  -- 运营中心端路由目录
-│  │  ├─user.php  -- 用户端小程序路由目录
-│  │  └─user_app.php  -- 用户端app路由目录
+│  │  ├─admin.php  -- admin端路由文件
+│  │  ├─merchant.php  -- 商户端路由文件
+│  │  ├─oper.php  -- 运营中心端路由文件
+│  │  ├─bizer.php  -- 业务员端路由文件
+│  │  ├─user.php  -- 用户端小程序路由文件
+│  │  └─user_app.php  -- 用户端app路由文件
 │  ├─api.php  接口路由入口及通用路由
 │  └─web.php  页面路由
 │
